--- a/internet_shop/templates/internet_shop/index.html
+++ b/internet_shop/templates/internet_shop/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block menu %}
+     <a href="{% url 'basket_view' %}">Корзина</a>
     {% for category in categories %}
         <a href="{% url 'category' category_name=category.url_name %}">{{ category.name }}</a>
 
